package tuteez.model.person;

import java.util.Set;

public class Lesson {
    public static final String MESSAGE_CONSTRAINTS = "";


    public static boolean isDuplicateLesson(Lesson lessons) {
        return false;
    }

    public Lesson(String ls) {

    }

    public static boolean isValidLesson(String trimmedLesson) {
        return true;
    }

}
